# obs-mcp

./: .coderabbit.yaml  .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  Containerfile  Containerfile.openshift-mcp-server  Makefile  OWNERS_ALIASES  README.md  RELEASE.md  TESTING.md  TOOLS.md  compose.yaml  go.mod  go.sum
evals/: README.md  evals.yaml  pyproject.toml  system.yaml
evals/lightspeed/: .gitignore  evals.yaml  system.yaml
evals/mcpchecker/: .gitignore  README.md  eval-logs.yaml  eval.yaml  mcp-config.yaml  sort-summary.py
evals/mcpchecker/results/: output.json  summary.txt
evals/mcpchecker/tasks/alerts/: alert-investigation.yaml  filtered-alerts.yaml  get-active-alerts.yaml  get-alerts.yaml  get-silences.yaml
evals/mcpchecker/tasks/dashboards/: dashboard-to-visualization.yaml  format-panels-for-ui.yaml  get-dashboard-panels.yaml  get-dashboard.yaml  list-dashboards.yaml
evals/mcpchecker/tasks/labels/: get-series.yaml  label-names.yaml  label-values.yaml  series-by-namespace.yaml
evals/mcpchecker/tasks/logs/: loki-backend-reachability.yaml  loki-label-names.yaml  loki-label-values.yaml  loki-list-instances.yaml  loki-query-network-flows.yaml
evals/mcpchecker/tasks/metrics/: list-metrics.yaml  list-node-metrics.yaml
evals/mcpchecker/tasks/otelcol/: get-batch-processor-schema.yaml  get-versions.yaml  list-components.yaml  validate-batch-processor-config-invalid.yaml  validate-batch-processor-config-valid.yaml
evals/mcpchecker/tasks/queries/: backend-reachability.yaml  cpu-usage.yaml  crashlooping-pods.yaml  (+16 more)
(+308 files in other folders)
